--- a/bakend/package.json
+++ b/bakend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "nodemon": "^3.1.4",
