--- a/bakend/package.json
+++ b/bakend/package.json
@@ -13,12 +13,11 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "blob-stream": "^0.1.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "handlebars": "^4.7.8",
     "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
@@ -28,9 +27,6 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pdfkit": "^0.15.0",
-    "puppeteer": "^23.2.1",
-    "puppeteer-core": "^23.2.1",
     "session": "^0.1.0"
   }
 }
