--- a/bakend/package.json
+++ b/bakend/package.json
@@ -23,6 +23,7 @@
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
